--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,7 +18,9 @@
   --text-color: #131313;
   --link-color: #3b63fb;
   --link-hover-color: #1d3ecf;
+  --nav-bg-color: #18171a;
 
+  --nav-background-color: var(--nav-bg-color);
   /* fonts */
   --body-font-family: roboto, roboto-fallback, sans-serif;
   --heading-font-family: roboto-condensed, roboto-condensed-fallback, sans-serif;
