--- a/styles/styles.css
+++ b/styles/styles.css
@@ -87,7 +87,8 @@ body.appear {
 }
 
 header {
-  height: var(--nav-height);
+  /* height: var(--nav-height); */
+  height: auto;
 }
 
 header .header,
