--- a/styles/styles.css
+++ b/styles/styles.css
@@ -258,3 +258,11 @@ main .section.highlight {
   margin: 0;
   padding: 40px 0;
 }
+/* customizing */
+div[data-aue-label="text1"]
+{    font-size: 3.125rem;
+    padding-right: 50%;
+    font-weight: 700;
+    color: #e4032e;
+    line-height: 1.5;
+}
