--- a/styles/styles.css
+++ b/styles/styles.css
@@ -270,7 +270,7 @@ div[data-aue-label="2ColSection"] div:first-child p{
 font-size: 3.125rem;
     color: red;
 }
-div[data-aue-label="2ColSection"] a
+div[data-aue-label="2ColSection"] div[data-aue-label="Column"]:first-child p
 {    background: transparent;
     border-color: #e4032e38;
     border-radius: 0;
