--- a/styles/styles.css
+++ b/styles/styles.css
@@ -266,10 +266,11 @@ div[data-aue-label="text1"]
     color: #e4032e;
     line-height: 1.5;
 }
-div[data-aue-label="2ColSection"] div:first-child p{
+div[data-aue-label="2ColSection"] div:first-child h2{
 font-size: 3.125rem;
-    color: red;
+    color: #e4032e;
 }
+
 div[data-aue-label="2ColSection"] div[data-aue-label="Column"]:first-child p
 {    background: transparent;
     border-color: #e4032e38;
